# akai2sfz

./: .gitignore  CMakeLists.txt  README.md
apps/cli/: main.cpp
apps/gui/: CMakeLists.txt  Info.plist.in  MainWindow.cpp  MainWindow.h  WJ-VSC.icns  icons.qrc  main.cpp
include/akai2sfz/: akai_format.hpp  codec.hpp  converter.hpp  emu_converter.hpp  emu_filesystem.hpp  emu_format.hpp  emu_raw_format.hpp  filesystem.hpp  image.hpp  krz_converter.hpp  krz_format.hpp  krz_raw_format.hpp  kurzweil_filesystem.hpp  kurzweil_raw_format.hpp  raw_format.hpp  roland_converter.hpp  roland_filesystem.hpp  roland_format.hpp  roland_raw_format.hpp  sfz_writer.hpp  wav_writer.hpp
src/: akai_format.cpp  cd_container.cpp  codec.cpp  converter.cpp  emu_converter.cpp  emu_filesystem.cpp  emu_format.cpp  filesystem.cpp  image.cpp  krz_converter.cpp  krz_format.cpp  kurzweil_filesystem.cpp  roland_converter.cpp  roland_filesystem.cpp  roland_format.cpp  sfz_writer.cpp  wav_writer.cpp
tests/: CMakeLists.txt  emu_probe.cpp  kurzweil_probe.cpp  roland_probe.cpp  test_codec.cpp
